Правки форматирования